<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu"
        android:textColor="@color/text_primary"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_perfil"
        style="@style/OceanButton"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ajustes"
        style="@style/OceanButton"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cerrar"
        style="@style/OceanButton"
        android:backgroundTint="@color/ocean_primary"/>
</LinearLayout>